--- a/index.html
+++ b/index.html
@@ -55,7 +55,28 @@
         </div>
     </header>
 
-
+<main class="site-main">
+    <section class="site-banner">
+        <div class="conttainer">
+            <div class="row">
+                <div class="col-lg-6 col-md-12 site-title">
+                    <h3 class="title-text">Hi</h3>
+                    <h1 class="title-text text-uppercase">I am Andi </h1>
+                    <h4 class="title-text text-uppercase">CompSci Student/Software Dev</h4>
+                    <div class="site-buttons">
+                        <div class="d-flex flex-row flex-wrap">
+                            <button type="button" class="btn-button primary-button mr-4 text-uppercase">Hire Me</button>
+                            <button type="button" class="btn-button secondary-button text-uppercase">Resume</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12 banner-image">
+                    <img src="./images/andi.png" alt="" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
 
 
     
