Add skeleton for about me section

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     </header>
 
 <main class="site-main">
+
     <section class="site-banner">
         <div class="container">
             <div class="row">
@@ -69,7 +70,7 @@
                         <div class="d-flex flex-row flex-wrap">
                             <button type="button" class="btn button primary-button mr-4 text-uppercase">hire
                                 me</button>
-                            <button type="button" class="btn button secondary-button text-uppercase">Get cv</button>
+                            <button type="button" class="btn button secondary-button text-uppercase">Resume</button>
                         </div>
                     </div>
                 </div>
@@ -79,6 +80,35 @@
             </div>
         </div>
     </section>
+
+    <section class="about-area">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-6 col-md-12">
+                    <div class="about-image">
+                        <img src="./images/andi.png" alt="" class="img-fluid">
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12 about-title">
+                    <h2 class="text-uppercase pt-5">
+                        <span>Passionate</span>
+                        <span>About</span>
+                        <span>Technology</span>
+                    </h2>
+                    <div class="paragraph py-4 w-75">
+                        <p class="para">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus harum adipisci necessitatibus quod blanditiis iure quae repellendus. Odit, neque numquam.
+                        </p>
+                        <p class="para">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus harum adipisci necessitatibus quod blanditiis iure quae repellendus. Odit, neque numquam.
+                        </p>
+                    </div>
+                    <button type="button" class="btn button primary-button text-uppercase">Cover Letter</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </main>
 
 
