style skills section

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 </head>
 <body>
 
+<!--Header and Navbar area -->
     <header class="header_area">
         <div class="main-menu">
             <nav class="navbar navbar-expand-lg navbar-light">
@@ -59,6 +60,7 @@
 
 <main class="site-main">
 
+    <!--Profile banner-->
     <section class="site-banner">
         <div class="container">
             <div class="row">
@@ -81,6 +83,7 @@
         </div>
     </section>
 
+    <!--About me section-->
     <section class="about-area">
         <div class="container-fluid">
             <div class="row">
@@ -108,7 +111,142 @@
             </div>
         </div>
     </section>
+<!--Software skills and technologies section-->
+    <section class="skills-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 skills-title">
+                    <h1 class="text-uppercase text-center title-text">Technical Skills</h1>
+                    <p class="para text-center">
+                        Below are some of the technologies and frameworks I've learnt over the years. If you'd like to see how I apply
+                        these skills, please take a look at the projects section.
+                    </p>
+                </div>
+            </div>
+            <div class="container skills-list">
+                <div class="row">
 
+                    <div class="col-lg-4 col-md-12 col-sm-6">
+                        <div class="skills">
+                            <div class="skills-image text-center py-4">
+                                <img src="./images/toolkit.png" alt="" style="width:100px;height:100px;">
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title text-uppercase text-center font-roboto">Developer Toolkit</h5>
+                                <p class="card-text text-secondary">
+                                    <ul>
+                                        <li>
+                                            Visual Studios Code
+                                        </li>
+                                        <li>
+                                            Git 
+                                        </li>
+                                        <li>
+                                            GNU Debugger
+                                        </li>
+                                        <li>
+                                            Valgrind Memory Debugger
+                                        </li>
+                                        <li>
+                                            SCRUM/Agile methodologies
+                                        </li>
+                                    </ul>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-12 col-sm-6">
+                        <div class="skills">
+                            <div class="skills-image text-center py-4">
+                                <img src="./images/platforms.png" alt="" style="width:100px;height:100px;">
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title text-uppercase text-center font-roboto">Platforms & Frameworks</h5>
+                                <p class="card-text text-secondary">
+                                    <ul>
+                                        <li>
+                                            Node.js
+                                        </li>
+                                        <li>
+                                            Express
+                                        </li>
+                                        <li>
+                                            Bootstrap
+                                        </li>
+                                        <li>
+                                            React
+                                        </li>
+                                        <li>
+                                            Laravel
+                                        </li>
+                                    </ul>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-12 col-sm-6">
+                        <div class="skills">
+                            <div class="skills-image text-center py-4">
+                                <img src="./images/languages.png" alt="" style="width:95px;height:95px;">
+                            </div>
+                            <div class="card-body text">
+                                <h5 class="card-title text-uppercase text-center font-roboto">Languages</h5>
+                                <p class="card-text text-secondary">
+                                    <ul>
+                                        <li>
+                                            C/C++
+                                        </li>
+                                        <li>
+                                            Java
+                                        </li>
+                                        <li>
+                                            Python
+                                        </li>
+                                        <li>
+                                            JavaScript
+                                        </li>
+                                        <li>
+                                            jQuery
+                                        </li>
+                                        <li>
+                                            PHP
+                                        </li>
+                                        <li>
+                                            SQL
+                                        </li>
+                                        <li>
+                                            Shell Scripting
+                                        </li>
+                                    </ul>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Projects Area ------------------------------------------------------------------------------>
+    <section class="project-area">
+        <div class="container">
+            <div class="project-title pb-5">
+                <h1 class="text-uppercase title-h1">Just some</h1>
+                <h1 class="text-uppercase title-h1">of my projects</h1>
+            </div>
+            <div class="button-group">
+                <button type="button" class="active">All</button>
+                <button type="button">Full-Stack</button>
+                <button type="button">Systems Programming</button>
+                <button type="button">Pet-Projects</button>
+                
+                
+            </div>
+        </div>
+    </section>
 </main>
 
 
