--- a/index.html
+++ b/index.html
@@ -370,19 +370,17 @@
     <section class="contact-area contact" id="contact">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 col-md-12 contact-title">
-                    <h1 class="title-text text-uppercase text-center contact-title">Contact</h1>
-                    <p class="contact-text text-center">
+                <div class="col-lg-12 col-md-12 text-center">
+                    <h1 class="title-text contact-title">Contact Me</h1>
+                    <p class="contact-text eyecatch">
                         Interested in working together? 
                     </p>
-                    <p class="contact-text text-center">
+                    <p class="contact-para mx-auto">
                         I'm currently seeking tech internships, and will be available for work between May 2021 - September 2022.
-                    </p>
-                    <p class="contact-text text-center">
                         I'd love to learn more about your company, feel free to contact me if you'd like to discuss an opportunity.
                     </p>
 
-                    <div class="contact-btn text-center">
+                    <div class="contact-btn">
                         <a href="mailto:andi.fan@mail.utoronto.ca" type="button" class="btn button primary-button text-uppercase">Email</a>
                     </div>
                 </div>
