--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <div class="row">
                     <div class="col-lg-12 col-md-12 site-title">
                         <h3 class="title-text">Hi I'm</h3>
-                        <h1 class="title-text">Andi</h1>
+                        <h1 class="title-text">Andi test</h1>
                         <h4 class="title-text ">Software Developer and CS undergrad</h4>
                         <div class="site-buttons">
                             <div class="d-flex flex-row flex-wrap">
